--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,14 @@ NODE_ENV=development
 DATABASE_URL=postgresql://user:password@host:5432/tails
 
 # ===========================================
-# Redis
+# Redis (Required for production)
 # ===========================================
 # Use a managed Redis service like:
 # - Upstash, Redis Cloud, AWS ElastiCache
+# For TLS/SSL connections, use rediss:// protocol
+# Example: rediss://username:password@host:6380
 REDIS_URL=redis://localhost:6379
+# REDIS_URL=rediss://default:password@your-redis-host.upstash.io:6380
 
 # ===========================================
 # AWS S3 / Compatible Storage
