--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   },
   "engines": {
     "node": ">=20"
+  },
+  "dependencies": {
+    "cheerio": "^1.1.2",
+    "date-fns-tz": "^3.2.0",
+    "papaparse": "^5.5.3"
   }
 }
